--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   <div style="position: absolute; top: 30px; left: 400px; z-index: 1000;">
     <button onclick="toggleMarkers()">싱크홀 사고 위치 표시</button>
   </div>
+
+  <div style="position: absolute; top: 30px; left: 550px; z-index: 1000;">
+  <button onclick="toggleAllColors()">전체 위험등급 표시</button>
+  </div>
+
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
 </body>
