--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </div>
   </div>
 
+  <!-- 위험 등급 이미지 -->
+  <div style="position: fixed; top: 100px; left: 30px; z-index: 1000;">
+    <img src="warning.png" alt="위험 등급" style="width: 250px; height: auto;">
+  </div>
+
   <div style="position: absolute; top: 30px; left: 400px; z-index: 1000;">
     <button onclick="toggleMarkers()">싱크홀 사고 위치 표시</button>
   </div>
