--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta property="og:image" content="대표.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta name="viewport" content="width=device-width, initial-scale=0.75">
   <meta charset="UTF-8" />
   <title>부산 싱크홀 안전지도</title>
