--- a/index.html
+++ b/index.html
@@ -210,22 +210,27 @@
 
     <div class="info-box info-box3" id="info-dongnaegu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2021년부터 총 13건 이상</p>
+      <p>2018년부터 총 15차례</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>동래역 및 미남역 인근</p>
+      <p>명륜동, 온천동, 반송로, 번영로, 사직동 등 다수 발생</p>
       <h3>최근 사고</h3>
-      <p>- 2025년 2월 2일, 명륜로</p>
-      <p>- 깊이 2.5m, 직경 3m 싱크홀 발생</p>
+      <p>- 2024년 7월 3일, 온천동 1441-13번지</p>
+      <p>- 폭 0.6m / 깊이 2m / 지름 1m</p>
+      <p>- 발생 원인 불명, GPR 탐사 결과 공동 없음</p>
+      <p>매몰된 H파일, 토류벽 발견</p>
     </div>
 
     <div class="info-box info-box4" id="info-dongnaegu4" style="display: none;">
       <h3>지반특성</h3>
-      <p>- 충적층과 점토층이 혼합된 지반</p>
-      <p>- 지하수위 변동 심함</p>
+      <p>- 충적·매립층 연약지반(온천천 하안)</p>
+      <p>- 지하수위 높음</p>
+      <p>- 상·하수·통신관 밀집·노후되어 누수·세립분 유실·성토 침하 빈발</p>
       <h3>대책</h3>
-      <p>① 노후 상하수도 정비</p>
-      <p>② 도로 하부 공동 탐사 확대</p>
-      <p>③ 위험도 높은 지역 집중 점검</p>
+      <p>① 하·오수관 CCTV 관로조사를 통한 라이닝 보강·교체</p>
+      <p>② 침하 다발 도로 심층 다짐과 시멘트그라우팅</p>
+      <p>③ 하안부 배수로 정비·수위 모니터링</p>
+      <p>④ GPR 탐사·위험도 평가 주기화</p>
+    
     </div>
     <!-- 연제구 정보 박스 -->
     <div class="info-box info-box1" id="info-yeonjegu1" style="display: none;">
@@ -318,22 +323,25 @@
 
     <div class="info-box info-box3" id="info-geumjeonggu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2022년부터 총 8건 발생</p>
+      <p>2018년부터 총 8차례</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>부곡동 일대</p>
+      <p>금강로, 장전동, 청룡동, 서동, 금사동 등</p>
       <h3>최근 사고</h3>
-      <p>- 2024년 8월 18일, 서동로</p>
-      <p>- 깊이 1.2m, 직경 1.8m 싱크홀 발생</p>
+      <p>- 2023년 9월 19일, 장전동 소정로 45</p>
+      <p>- 폭 0.5m / 깊이 3m / 지름 0.5m</p>
+      <p>- 하수박스 슬라브 및 벽체 파손에서 토사 유실 추정</p>
     </div>
 
     <div class="info-box info-box4" id="info-geumjeonggu4" style="display: none;">
       <h3>지반특성</h3>
-      <p>- 기반암과 모래층 혼재</p>
-      <p>- 배수 기능 비교적 양호</p>
+      <p>- 금정산 풍화 화강암 사면, 계곡 충적층 혼재</p>
+      <p>- 배면수 유입 위험 有</p>
+      <p>- 하수·우수 박스/관로 노후‧다짐 불량, 산지 우수에 의한 토사 유실 위험</p>
       <h3>대책</h3>
-      <p>① 도로 하부 공동 점검</p>
-      <p>② 상하수도 점검 주기 강화</p>
-      <p>③ 기반시설 데이터베이스 구축</p>
+      <p>① 노후 박스·흄관 구조 보강·내삽관(스파이럴 라이닝)</p>
+      <p>② 사면·계곡부 전면 재다짐 + 프리로드 압밀</p>
+      <p>③ 집수정·측구 확충해 우수 우회</p>
+      <p>④ 지중 센서로 수위·공동 실시간 감시</p>
     </div>
     <!-- 북구 정보 박스 -->
     <div class="info-box info-box1" id="info-bukgu1" style="display: none;">
@@ -351,22 +359,24 @@
 
     <div class="info-box info-box3" id="info-bukgu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2021년부터 총 14건 발생</p>
+      <p>2018년부터 총 14차례</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>구포시장, 덕천교차로 인근</p>
+      <p>구포동, 만덕동, 금곡동, 화명동 등</p>
       <h3>최근 사고</h3>
-      <p>- 2024년 7월 8일, 구포로</p>
-      <p>- 깊이 2.8m, 직경 3.2m 싱크홀 발생</p>
+      <p>- 2024년 4월 19일, 구포동 1222-22 (동성종합상가 일원)</p>
+      <p>- 폭 0.8m / 깊이 1.3m / 지름 0.8m</p>
+      <p>- 가스배관 다짐 불량으로 추정</p>
     </div>
 
     <div class="info-box info-box4" id="info-bukgu4" style="display: none;">
       <h3>지반특성</h3>
-      <p>- 충적층 분포, 배수 취약</p>
-      <p>- 지하수위 계절 변화 큼</p>
+      <p>- 낙동강 범람원·삼각주 연약 점토층(부산점토) 두껍고 압밀 진행 중</p>
+      <p>- 도시철도 상부 되메우기 불량 + 노후 상·하수관 누수 → 공동 확대·부등침하 잦음</p>
       <h3>대책</h3>
-      <p>① 지하수위 지속 모니터링</p>
-      <p>② 하부 공동 정밀 탐사</p>
-      <p>③ 침하 예방 포장공법 확대</p>
+      <p>① 노후 상·하수관 교체 + 누수 모니터링</p>
+      <p>② 도시철도 상부 도로 대구경 마이크로파일 + 롤러 재다짐</p>
+      <p>③ 충적층 지중 수위센서·장기 압밀 관측</p>
+      <p>④ 유관기관 연계 CCTV 조사 및 GPR 탐사 병행</p>
     </div>
     <!-- 기장군 정보 박스 -->
     <div class="info-box info-box1" id="info-gijanggun1" style="display: none;">
