--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="info-box info-box1" id="info-yeonjegu1" style="display: none;">
       <h3>위험등급 4</h3>
       <p>부산광역시 연제구</p>
-      <p>사고수 12</p>
+      <p>사고수 14</p>
     </div>
 
     <div class="info-box info-box2" id="info-yeonjegu2" style="display: none;">
@@ -245,22 +245,28 @@
 
     <div class="info-box info-box3" id="info-yeonjegu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2022년부터 총 12건 발생</p>
+      <p>2018년부터 총 14건의 싱크홀 사고 발생</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>시청역, 연산교차로 부근</p>
+      <p>연산터널 입구, 연산교차로 방면, 연산동(다온약국 앞), 거제시장로 등</p>
+      <p>→ 주요 교차로 및 매설관 밀집 지역 중심으로 발생</p>
       <h3>최근 사고</h3>
-      <p>- 2025년 1월 11일, 연산로</p>
-      <p>- 깊이 2m, 직경 2.5m 싱크홀 발생</p>
+      <p>- 2024년 5월 7일, 연산동 1799-3번지(다온약국 앞)</p>
+      <p>- 폭 0.7m, 길이 3.0m, 깊이 1.0m</p>
+      <p>- 원인불명, 확인굴착 후 되메우기</p>
+      <p>- 복구 완료일: 2024년 6월 13일</p>
     </div>
 
     <div class="info-box info-box4" id="info-yeonjegu4" style="display: none;">
-      <h3>지반특성</h3>
-      <p>- 사질토 기반 혼합지반</p>
-      <p>- 강우 시 침투율 높음</p>
+      <h3>지반 특성</h3>
+      <p>· 주요 도로 및 교차로 중심의 충적층 추정 지역</p>
+      <p>· 상수관, 가스관, 배수관 등 지하 매설관 다수 존재</p>
+      <p>· 반복 침하 이력 및 지반 불균질성 존재</p>
+      <p>· 일부 지역은 지질 조사 미비로 ‘기타’ 분류</p>
       <h3>대책</h3>
-      <p>① 배수 시스템 정비</p>
-      <p>② 상수관 누수 점검 확대</p>
-      <p>③ 정기적인 도로 하부 조사</p>
+      <p>① 지하 매설관로 정밀 점검 및 보강</p>
+      <p>② 침하 감지 센서 설치 및 실시간 모니터링 체계 구축</p>
+      <p>③ 반복 침하 지역에 대한 구조적 보강 공법 적용</p>
+      <p>④ 도로보수원 수시 점검 및 예측 기반 유지보수 시스템 도입</p>
     </div>
     <!-- 수영구 정보 박스 -->
     <div class="info-box info-box1" id="info-suyeonggu1" style="display: none;">
@@ -405,36 +411,42 @@
 
     <!-- 부산진구 정보 박스 -->
     <div class="info-box info-box1" id="info-busanjingu1" style="display: none;">
-      <h4>위험등급 3</h4>
+      <h3>위험등급 4</h3>
       <p>부산광역시 부산진구</p>
-      <p>사고수 11</p>
+      <p>사고수 13</p>
     </div>
 
     <div class="info-box info-box2" id="info-busanjingu2" style="display: none;">
       <p>지하철 분포 3등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p>지반 위험도 3등급</p>
+      <p>지하수 2등급</p>
+      <p>노후건물 분포 2등급</p>
     </div>
 
     <div class="info-box info-box3" id="info-busanjingu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2021년부터 총 11건 발생</p>
+      <p>2018년부터 총 13건의 싱크홀 사고 발생</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>서면 일대, 전포대로</p>
+      <p>전포동, 부산진구청 인근 굴다리 앞 등</p>
+      <p>→ 중심 상업지구 및 주요 도로 인근에서 반복 발생</p>
       <h3>최근 사고</h3>
-      <p>- 2025년 3월 22일, 전포동</p>
-      <p>- 깊이 2.3m, 직경 2.7m 싱크홀 발생</p>
+      <p>- 2023년 8월 31일, 전포동 동천로 103</p>
+      <p>- 폭 1.0m, 길이 1.4m, 깊이 1.1m</p>
+      <p>- 상수도관(D800) 누수로 인한 지반침하</p>
+      <p>- 피해 차량 1대 발생</p>
+      <p>- 복구 완료일: 2023년 9월 1일</p>
     </div>
 
     <div class="info-box info-box4" id="info-busanjingu4" style="display: none;">
-      <h3>지반특성</h3>
-      <p>- 도심 밀집 지역으로 지하수 유동 활발</p>
-      <p>- 연약한 충적층 일부 분포</p>
+      <h3>지반 특성</h3>
+      <p>· 상수도관, 하수관 등 지하시설물 집중 구간</p>
+      <p>· 유동인구 및 교통량이 많은 도심지</p>
+      <p>· 반복 침하 이력 존재, 지질 정보 일부 미비</p>
       <h3>대책</h3>
-      <p>① 지하 매설물 관리 강화</p>
-      <p>② 정밀 조사 통한 위험지역 선별</p>
-      <p>③ 상시 감시체계 및 주민 신고 연계</p>
+      <p>① 노후 상수관 및 매설관로 정기 조사 및 교체</p>
+      <p>② 도로 하부 공동 탐지 장비 활용한 사전 점검 강화</p>
+      <p>③ 사고 구간 반복 침하 방지를 위한 지반 보강 공법 적용</p>
+      <p>④ 교통량 많은 지역 중심으로 예측 기반 유지관리 시스템 구축</p>
     </div>
 
     <!-- 동구 정보 박스 -->
@@ -480,29 +492,34 @@
 
     <div class="info-box info-box2" id="info-seogu2" style="display: none;">
       <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p>지반 위험도 3등급</p>
+      <p>지하수 3등급</p>
+      <p>노후건물 분포 3등급</p>
     </div>
 
     <div class="info-box info-box3" id="info-seogu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2021년부터 총 11건 발생</p>
+      <p>2019년부터 총 11건의 싱크홀 사고 발생</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>암남동, 송도해수욕장 일대</p>
+      <p>충무동, 남부민동, 암남동 등</p>
+      <p>→ 지하 하수 인프라 인접 지역과 해안가 도로에서 다수 발생 추정</p>
       <h3>최근 사고</h3>
-      <p>- 2025년 1월 28일, 충무대로</p>
-      <p>- 깊이 2.1m, 직경 2.6m 싱크홀 발생</p>
+      <p>- 2024년 7월 25일, 충무동2가 4-5</p>
+      <p>- 폭 0.6m, 길이 1.2m, 깊이 1.0m</p>
+      <p>- 하수박스(1.2×1.0) 하단 파손 → 토사 유출로 인한 지반침하</p>
+      <p>- 복구 완료일: 2024년 7월 27일</p>
     </div>
 
     <div class="info-box info-box4" id="info-seogu4" style="display: none;">
-      <h3>지반특성</h3>
-      <p>- 구릉지 기반, 배수 경로 불규칙</p>
-      <p>- 노후 건물 및 도로 인프라 밀집</p>
+      <h3>지반 특성</h3>
+      <p>· 해안 인접 저지대 및 하수 인프라 밀집 구간</p>
+      <p>· 하수관 노후화 및 집중호우 시 침하 위험 증가</p>
+      <p>· 도심지 대비 구조적 취약성 존재</p>
       <h3>대책</h3>
-      <p>① 노후 상하수도 교체사업 추진</p>
-      <p>② 급경사지 붕괴 위험지구 보강</p>
-      <p>③ 재해취약지역 사전 점검 강화</p>
+      <p>① 하수박스 및 대형 하수관의 정기 정밀 진단 및 교체</p>
+      <p>② 해안가 저지대의 배수 시스템 개선 및 보강</p>
+      <p>③ 사고 위험지역 중심의 사전 지반탐사 및 침하 예측 모델 적용</p>
+      <p>④ 토사 유출 가능 지역에 대한 구조적 차수·보강 조치</p>
     </div>
     <!-- 중구 정보 박스 -->
     <div class="info-box info-box1" id="info-junggu1" style="display: none;">
@@ -549,29 +566,34 @@
 
     <div class="info-box info-box2" id="info-yeongdogu2" style="display: none;">
       <p>지하철 분포 1등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p>지반 위험도 2등급</p>
+      <p>지하수 2등급</p>
+      <p>노후건물 분포 2등급</p>
     </div>
 
     <div class="info-box info-box3" id="info-yeongdogu3" style="display: none;">
       <h3>발생 현황</h3>
-      <p>2022년부터 총 4건 발생</p>
+      <p>2019년부터 총 4건의 싱크홀 사고 발생</p>
       <h3>싱크홀 발생 주요 지역</h3>
-      <p>남항동, 태종로 일대</p>
+      <p>청학동, 동삼동, 봉래동 등</p>
+      <p>→ 도심과 해안 인접지, 노후 하수관 인근 지역 중심 발생</p>
       <h3>최근 사고</h3>
-      <p>- 2024년 10월 12일, 영선동</p>
-      <p>- 깊이 1.7m, 직경 2.3m 싱크홀 발생</p>
+      <p>- 2024년 9월 10일, 청학동 85 (조내기로 33)</p>
+      <p>- 폭 1.0m, 길이 1.0m, 깊이 1.0m</p>
+      <p>- 원인: 하수관로 손상</p>
+      <p>- 복구 완료일: 2024년 9월 11일</p>
     </div>
 
     <div class="info-box info-box4" id="info-yeongdogu4" style="display: none;">
-      <h3>지반특성</h3>
-      <p>- 해안에 인접한 복합지반</p>
-      <p>- 침식 및 침투 위험 존재</p>
+      <h3>지반 특성</h3>
+      <p>· 구릉지와 도심, 항만이 혼재된 복합 지형</p>
+      <p>· 지하 하수 인프라 노후 및 구조물 인접으로 인한 침하 위험</p>
+      <p>· 집중 강우 시 배수 불량으로 하부 공동 형성 가능</p>
       <h3>대책</h3>
-      <p>① 해안도로 지반 보강</p>
-      <p>② 지하수 유출 방지 설비 강화</p>
-      <p>③ 노후 인프라 사전 정비</p>
+      <p>① 노후 하수관 정밀 점검 및 손상 구간 교체</p>
+      <p>② 해안·저지대 중심 배수 개선 및 차수 보강</p>
+      <p>③ 공동 탐지장비 활용 정기 점검</p>
+      <p>④ 사고 발생 구간에 대한 침하 예방 포장공법 확대 적용</p>
     </div>
     <!-- 강서구 정보 박스 -->
     <div class="info-box info-box1" id="info-gangseogu1" style="display: none;">
@@ -662,7 +684,7 @@
     <img id="guImage1" src="" style="width: 250px; height: auto; margin-bottom: 10px;"><br>
     <img id="guImage2" src="" style="width: 250px;">
   </div>
-  
+
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
 </body>
